--- a/MV.html
+++ b/MV.html
@@ -12,7 +12,6 @@
             justify-content: space-around;
             align-items: center;
             padding: 20px;
-            background-color: #222;
         }
 
         .video {
@@ -23,6 +22,10 @@
         .video video {
             height: 300px;
             background-color: #000000;
+        }
+
+        body div{
+            max-width: 1150px;
         }
     </style>
 </head>
@@ -55,7 +58,6 @@
         const rowDiv = document.createElement('div');
         rowDiv.style.display = 'flex';
         rowDiv.style.marginBottom = '20px';
-        rowDiv.classList.add('col-lg-3');
         rowDiv.classList.add('col-md-4');
         rowDiv.classList.add('col-sm-6');
 
