--- a/MV.html
+++ b/MV.html
@@ -12,6 +12,7 @@
             justify-content: space-around;
             align-items: center;
             padding: 20px;
+            background-color: #222;
         }
 
         .video {
